--- a/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.html
+++ b/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.html
@@ -1,1 +1,31 @@
-<p>inverse-kinematics works!</p>
+<div class="flexbox margin-top margin-bottom">
+  <button
+    mat-raised-button
+    color="accent"
+    class="margin-right"
+    (click)="toggleVisibility()"
+  >
+    {{ settingsVisible ? "HIDE" : "SHOW" }}
+  </button>
+</div>
+<div class="flexbox margin-top" *ngIf="settingsVisible">
+  <mat-form-field appearance="fill" class="margin-right">
+    <mat-label>Bones</mat-label>
+    <input matInput [(ngModel)]="bones" type="number" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill" class="margin-right">
+    <mat-label>Max iterations</mat-label>
+    <input matInput [(ngModel)]="maxIterations" type="number" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill" class="margin-right">
+    <mat-label>Error</mat-label>
+    <input matInput [(ngModel)]="error" type="number" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill" class="margin-right">
+    <mat-label>G parameter</mat-label>
+    <input matInput [(ngModel)]="g" type="number" />
+  </mat-form-field>
+</div>
