--- a/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.html
+++ b/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.html
@@ -34,5 +34,5 @@
 </div>
 
 <div class="flexbox height">
-  <div class="frame" (click)="mouseEnter($event)" #frame></div>
+  <div class="frame" (mousemove)="mouseEnter($event)" #frame></div>
 </div>
