--- a/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.html
+++ b/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.html
@@ -15,6 +15,7 @@
   <mat-form-field appearance="fill" class="margin-right">
     <mat-label>Bones</mat-label>
     <input matInput [(ngModel)]="bones" type="number" />
+    <mat-icon matSuffix (click)="openSettings()">mode_edit</mat-icon>
   </mat-form-field>
 
   <mat-form-field appearance="fill" class="margin-right">
