--- a/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.scss
+++ b/src/app/components/animation/inverse-kinematics/inverse-kinematics.component.scss
@@ -11,3 +11,10 @@
 .margin-right {
   margin-right: 1rem;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
