Cube and sphere simulation

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="header">
   <button mat-button routerLink="">INVERSE KINEMATICS</button>
-  <button mat-button routerLink="">TBD</button>
+  <button mat-button routerLink="rigid-body">RIGID BODY SIMULATION</button>
   <button mat-button routerLink="">TBD</button>
 </mat-toolbar>
