Mesh size setting and lighting

--- a/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.html
+++ b/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.html
@@ -50,6 +50,11 @@
     />
     <mat-icon matSuffix (click)="openSphereSettings()">mode_edit</mat-icon>
   </mat-form-field>
+
+  <mat-form-field appearance="fill" class="margin-right">
+    <mat-label>Mesh size</mat-label>
+    <input matInput [(ngModel)]="size" type="number" (ngModelChange)="init()" />
+  </mat-form-field>
 </div>
 
 <div class="flexbox height">
