Spawn objects at mouse position

--- a/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.html
+++ b/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.html
@@ -58,5 +58,11 @@
 </div>
 
 <div class="flexbox height">
-  <div class="frame" #frame></div>
+  <div
+    class="frame"
+    (mousemove)="mouseMove($event)"
+    (mousedown)="mouseDown()"
+    (mouseup)="mouseUp()"
+    #frame
+  ></div>
 </div>
