--- a/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.html
+++ b/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.html
@@ -60,7 +60,7 @@
 <div
   class="frame"
   (mousemove)="mouseMove($event)"
-  (mousedown)="mouseDown()"
+  (mousedown)="mouseDown($event)"
   (mouseup)="mouseUp()"
   #frame
 ></div>
