--- a/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.scss
+++ b/src/app/components/animation/rigid-body-simulation/rigid-body-simulation.component.scss
@@ -1,12 +1,8 @@
 .frame {
-  margin: auto;
   border: 2px solid black;
   height: 60%;
   width: 60%;
-}
-
-.height {
-  height: 100%;
+  margin: auto;
 }
 
 .margin-right {
@@ -18,4 +14,8 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+mat-slider {
+  width: 40%;
 }
