--- a/src/app/components/animation/particle-system/particle-system.component.scss
+++ b/src/app/components/animation/particle-system/particle-system.component.scss
@@ -13,6 +13,13 @@
   margin-right: 1rem;
 }
 
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 21.5px;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
